Troca do webclient pelo restTemplate